# SO

MAN files/: close.txt  free.txt  malloc.txt  mmap.txt  open.txt  read.txt  shmat.txt  shmctl.txt  shmget.txt  write.txt
SO/: CMakeLists.txt  a.out  dynamic_list.c  dynamic_list.h  p0  p0.c  types.h
